--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
 This CSS file will be included with your plugin, and
 available in the app when your plugin is enabled.
 
-If your plugin does not need CSS, delete this file.
-
 */
+
+/* Define custom style for lines starting with . */
+.cm-s-obsidian .completed {
+    color: rgb(44, 63, 44); /* Change this to the desired text color */
+    /*text-decoration: line-through; /* Add other styles as needed */
+  }
